--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -138,9 +138,12 @@ button a {
 }
 
 #top #left {
-    outline: solid 1px gray; width: 20%;
+    outline: solid 1px gray; width: 20%; display: flex;
 }
 
+#top #left img{
+    margin: auto;
+}
 #top #right {
     width: 80%;
 }
