--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -28,18 +28,18 @@
                 <div id="top">
                     <div id="left">
                         {% if item.item_borrowed.item_stock.item_information.item_photo %}
-                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
+                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item" height="100%" object-fit="contain">
                         {% endif %}
 
                     </div>
                     <div id="right">
-                        <p id="item_name">{{ item.item_borrowed.item_stock.item_information.item_photo }}</p>
+                        <p id="item_name">{{ item.item_borrowed.item_stock.item_information.item_name }}</p>
                         <p id="item_details">
                             Time Borrowed: {{ item.item_borrowed.item_date_borrowed }}<br />
                             Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
                             Borrower: {{ item.item_borrowed.item_borrower }}
                         </p>
-                        <p id="item_quantity">Item Quantity: item.item_borrowed.item_quantity</p>
+                        <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
 
                     </div>
                 </div>
