--- a/static/login/loginstyle.css
+++ b/static/login/loginstyle.css
@@ -112,7 +112,7 @@ body, html {
 }
 
 .form-container {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(234, 231, 231, 0.8);
     padding: 60px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -157,7 +157,11 @@ button {
     width: 100%;
             box-sizing: border-box;
             padding: 10px;
-            margin-bottom: 5px;
+            width: 235px;
+            height: 42px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+            margin-left: 32px;
             background-color: rgba(96, 158, 228, 0.8);
             color: white;
             font-weight: bold;
@@ -170,10 +174,12 @@ button {
     width: 100%;
             box-sizing: border-box;
             padding: 10px;
+            width: 235px;
+            height: 42px;
             background-color:white;
             color: rgba(171, 177, 177);
             font-weight: bold;
-            border: 3px solid rgba(171, 177, 177);
+            border: 4px solid rgba(171, 177, 177);
             border-radius: 21px;
             cursor: pointer;
 }
