--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -22,7 +22,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
                     <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
-                    <a href="{% url 'admin_recents' %}" class="navbar-brand">Recent</a>
+                    <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
                     <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
                     <a href="{% url 'members' %}" class="navbar-brand">Members</a>
                     <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
@@ -82,8 +82,6 @@
                     </div>
                     <label class="itemName">Item Name: <input type="text" id="itemName" name="itemName" required></label>
                     <label class="itemName">Description: <input type="text" id="description" name="description"></label><br><br>
-                    <label class="itemName">Serial Number: <input type="text" id="serial" name="serial" required></label>
-                    <label class="itemName">Issue: <input type="text" id="issue" name="issue"></label>
                     <label class="itemName">Available Item: <input type="text" id="available-item" name="available-item"
                             required></label>
                     <button type="submit" id="addButton">Add</button>
