--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -3,15 +3,51 @@
 <html>
     <head>
         <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}">
-        <title>ADMIN RECENTS</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     </head>
-    <h1>ADMIN RECENTS</h1>
     <body>
-        <button><a href="{% url 'admin_home' %}">Home</a></button>
-        <button><a href="{% url 'admin_recents' %}">Recents</a></button>
-        <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'members' %}">Members</a></button>
-        <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <body>
+    <header>
+        <div class="logo left">
+            <img src="static/home/LSPU.png" alt="Left Logo">
+        </div>
+        <div class="search-bar">
+            <input type="text" class="search-input" placeholder="Search...">
+            <i class="fas fa-search"></i>
+        </div>
+        <div class="logo right">
+            <img src="static/home/CSS.png" alt="Right Logo">
+        </div> 
+    </header>
+    <div class="head"></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a href="{% url 'admin_home' %}" class="navbar-brand">Home</a>
+            <a href="{% url 'admin_recents' %}" class="navbar-brand">Recents</a>
+            <a href="{% url 'admin_unreturned' %}" class="navbar-brand">Unreturned</a>
+            <a href="{% url 'members' %}" class="navbar-brand">Members</a>
+            <a href="{% url 'admin_userprofile' %}" class="navbar-brand">Account</a>
+            <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+        </div>
+    </nav>
+    <div id="mainForm" class="form">
+    <div id="recentForm" class="recent-form-items">
+        <!-- Your existing content here -->
+        <div class="recent-items">
+            <img src="static/home/clean.png" alt="clean">
+            <div class="recent-items-text">
+                <h4>Name of Item:</h4><br>
+                <p>Time Borrowed:</p>
+                <p>Time Returned:</p>
+                <p>Borrower:</p>
+                <div class="right-text">
+                    <p>Item Quantity:</p>
+                </div>
+            </div>
+        </div>
+        <div class="recent-lines"></div>
+    </div> 
+    </div>
     </body>
 </html>
