--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -233,10 +233,12 @@ body {
   }
   
   .fa-search {
-    margin-left: -3%;
+    margin-left: -5%;
     color: firebrick;
     font-size: 18px;
     cursor: pointer;
+    margin-top: 7px;
+  
   }
   
   /* navigations */
@@ -750,7 +752,8 @@ body {
     }
   
     .fa-search {
-      margin-left: 0;
+    margin-left: 0;
+      
     }
   
     .logo.left,
