Added adding items function in admin

--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -28,6 +28,14 @@
             <div id="edit_back_buttons">
                 
             </div>
+            <div id="add_item">
+                <div id="add_item_form">
+
+                </div>
+                <div id="add_stock_form">
+
+                </div>
+            </div>
             <h1>{{ current_category }}</h1>
             {% for item in cleaning_inventory %}
                 <div>
