--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -735,6 +735,96 @@ body {
     #selectAllCheckbox {
       margin-right: 10px; /* Add space between checkbox and label */
     }
+    .add-item-btn {
+      padding: 10px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  }
+  .add-item-btn:hover{
+    background-color: black;
+    color: wheat;
+  }
+  .item-modal {
+      display: flex;
+      justify-content: center;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .item-modal-content {
+      display: flex;
+      max-width: 600px;
+      background-color: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .item-modal-right {
+      width: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+  }
+  
+  .item-close-modal {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+  }
+  
+  .item-label {
+      margin-bottom: 5px;
+      display: block;
+  }
+  
+  .item-input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+  }
+  
+  .item-btn {
+      display: flex;
+      gap: 10px;
+  }
+  
+  .item-btn button {
+      flex: 1;
+  }
+  
+  .item-photo-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+  }
+  
+  .item-preview-image {
+      max-width: 100px;
+      margin-right: 100px;
+  }
+  .item-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .item-form {
+    background: #fff; /* Add your desired background color */
+    border-radius: 5px;
+    padding: 100px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
+  }
   /* Media queries for responsiveness */
   @media screen and (max-width: 768px) {
     header {
