Added pop up div

--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -35,6 +35,9 @@
                 <div id="add_stock_form">
 
                 </div>
+                <div id="success_popup">
+
+                </div>
             </div>
             <h1>{{ current_category }}</h1>
             {% for item in cleaning_inventory %}
