--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -825,6 +825,57 @@ body {
     padding: 100px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
   }
+  .item-containerr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .item-forms {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+  }
+  
+  .item-input {
+    margin: 8px 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  label{
+    margin-left: 30px;
+  }
+  .item-preview-image {
+    max-width: 100%;
+    margin-top: 10px;
+  }
+  
+  .item-btn {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .item-btn button {
+    flex: 1;
+    margin-top: 50px;
+  }
   /* Media queries for responsiveness */
   @media screen and (max-width: 768px) {
     header {
