--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -1,10 +1,8 @@
-/*
-Reset stylesheet
-*/
-html, body, div, span, object, iframe,
+/* Reset stylesheet */
+html, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
+del, dfn, em, ins, kbd, q, samp,
 small, strong, sub, sup, var,
 b, i,
 dl, dt, dd, ol, ul, li,
@@ -23,9 +21,159 @@ time, mark, audio, video {
 }
 
 body {
+    /* Your existing body styles */
     line-height:1;
+    line-height:1;
+    height: 100%;
+    width : 100%;
+    min-height : 100vh;
+    background: rgb(255, 255, 255);
+    margin: 0; 
+    overflow-x: hidden;
+    overflow-y : scroll;
+    font-family: Arial, sans-serif; /* Adjust the font family as needed */
+    padding-top: 100px;
+  }
+
+
+/* Search bar / header */
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(113,26,33); /* Top color for the header */
+    padding: 5px;
+    border-bottom: 20px solid rgb(230,124,55); /* Bottom color */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
+  
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+  
+.left-section {
+    width: 100px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    flex-shrink: 0;
+}
+  
+.lspu-logo{
+    width: 90px;
+    border-radius:50px;
+}
+  
+.middle-section {
+    flex: 1;
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+}
+  
+form {
+    display: flex;
+    flex: 1;
+    align-items: center;
 }
 
+.search-bar {
+    flex: 1;
+    height: 14px;
+    padding: 10px;
+    margin: 5px;
+    border: none;
+    border-radius: 3px;
+    outline: none;
+    background-color: white;
+    color: #000000; /* Set text color to be visible on the background color */
+    font-size: 15px;
+    box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+    width: 0;
+}
+  
+.search-bar::placeholder{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+  
+.search-button {
+    background-color: rgb(230,124,55); /* Set the submit button color */
+    color: #ffffff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    margin-right: 5px;
+    cursor: pointer;
+} 
+  
+.search-button:hover  {
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+  
+.right-section {
+    width: 100px;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+  
+.ccs-logo{
+    width: 92px;
+    border-radius:46px;
+}
+  
+/* Buttons (home and logout) */
+.button-grid{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 16px;
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    gap: 1em;
+}
+  
+.buttons-tabs {
+    background-color: rgb(255,255,255);
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: box-shadow 0.15s;
+    vertical-align: top;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
+    width: 150px;
+}
+    
+.buttons-tabs:hover  {
+    box-shadow: 5px 5px 15px rgba(113,26,33, 0.40);
+}
+  
+a{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    font-family: Arial;
+}
+  
+a:link { 
+    text-decoration: none; 
+} 
+  
+a:hover { 
+    text-decoration: none; 
+} 
+  
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
     display:block;
@@ -45,14 +193,6 @@ q:before, q:after {
     content:none;
 }
 
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
 /* change colours to suit your needs */
 ins {
     background-color:#ff9;
@@ -63,7 +203,7 @@ ins {
 /* change colours to suit your needs */
 mark {
     background-color:#ff9;
-    color:#000;
+    color:#b1b7a3;
     font-style:italic;
     font-weight:bold;
 }
@@ -99,6 +239,69 @@ input, select {
 /*
 Start coding here
 */
+.category-container {
+    background-color: rgb(255, 255, 255);
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); /* Optional: Add a shadow for better visibility */
+    margin-top: 45px;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+}
+  
+.category-container-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-left: 18px;
+    width: 0;
+}
+  
+.categories {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    gap: 1em;
+}
+
+.category_button {
+    border: 0.5px solid rgb(171,177,177);
+    border-radius: 6px;
+    height: 230px;
+    width: 150px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px; 
+}
+  
+.category_button:hover {
+    border: 2px solid rgb(230,124,55);
+    box-shadow: 8px 8px 10px rgba(113,26,33, 0.40);
+}
+
+.category-row {
+    margin-bottom: 5px;
+}
+
+.category-pic {
+    width: 150px;
+}  
+
+.category_button.category {
+    display: none;
+    text-align: center;
+    margin-top: 5px;
+    border-top: 0.5px solid rgb(171,177,177);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    font-family: Arial;
+}
 
 #cleaning {
     display: none;
