--- a/templates/home/guest_home.html
+++ b/templates/home/guest_home.html
@@ -2,12 +2,116 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'home/homestyle.css' %}">
+        <link rel="stylesheet" href="{% static 'home/guesthomestyle.css' %}">
         <title>GUEST HOME</title>
     </head>
-    <h1>GUEST HOME</h1>
+
     <body>
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+      
+        <div class="header">
+            
+            <div class="left-section">
+                <img class="lspu-logo" src="media/logo/lspu-logo.png">
+            </div>
+
+            <div class="middle-section">
+                <form method="get" action="{% url 'home' %}">
+                    <input class="search-bar" type="text" placeholder="Search by name,id,category" value="{{ query }}">
+                    <input class="search-button" type="submit" value="Search">
+                </form>
+            </div>
+
+            <div class="right-section">
+                <img class="ccs-logo" src="media/logo/ccs-logo.jpg">
+            </div>
+            
+        </div>
+        
+        
+
+        <div class="button-grid">
+            {% include 'home/result_list.html' %}
+            <button class="home-button"><a href="{% url 'home' %}">Home</a></button>
+            <button class="logout-button"><a href="{% url 'logout' %}">Log out</a></button>
+         </div>    
+
+            <div class="category-container">
+                <p class="category-container-title">
+                    Categories 
+                </p>    
+                <div class="category-grid">
+                    
+                    <div class="category-preview">
+                     <a href="{% url 'logout' %}">   
+                        <div class="category-row">
+                            <img class="category-pic" src="media/categories_icon/cleaninggg.png">
+                        </div>
+                                
+                        <div class="category-info">  
+                            <p class="category-title">
+                                CLEANING MATERIALS
+                            </p>
+                        </div>
+                      </a>     
+                    </div>
+
+                    <div class="category-preview">
+                        <div class="category-row">
+                            <img class="category-pic" src="media/categories_icon/GADGETS.png">
+                        </div>
+                                
+                        <div class="category-info">  
+                            <p class="category-title">
+                                GADGETS
+                            </p>
+                        </div>
+                            
+                    </div>
+
+                    <div class="category-preview">
+                        <div class="category-row">
+                            <img class="category-pic" src="media/categories_icon/documents.png">
+                        </div>
+                                
+                        <div class="category-info">  
+                            <p class="category-title">
+                                DOCUMENTS
+                            </p>
+                        </div>
+                            
+                    </div>
+
+                    
+                    <div class="category-preview">
+                        <div class="category-row">
+                            <img class="category-pic" src="media/categories_icon/roooom.png">
+                        </div>
+                                
+                        <div class="category-info">  
+                            <p class="category-title">
+                                ROOM
+                            </p>
+                        </div>
+                            
+                    </div>
+
+                    
+                    <div class="category-preview">
+                        <div class="category-row">
+                            <img class="category-pic" src="media/categories_icon/furni.png">
+                        </div>
+                                
+                        <div class="category-info">  
+                            <p class="category-title">
+                                FURNITURES
+                            </p>
+                        </div>
+                            
+                    </div>
+                </div>
+            </div>
+                    
+       
+            <script defer src="{% static 'home/homescript.js' %}"></script>
     </body>
 </html>
