--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,22 +9,52 @@
     <h1>FACULTY HOME</h1>
     <body>
 
-     <form method="get" action="{% url 'home' %}">
-        <input type="text" name="q" placeholder="Search by name,id,category" value="{{ query }}">
-        <input type="submit" value="Search">
-    </form>
-    {% include 'home/result_list.html' %}
-        <button><a href="{% url 'home' %}">Home</a></button>
-        <button><a href="{% url 'recents' %}">Recents</a></button>
-        <button><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
-        <button><a href="{% url 'notification' %}">Notification</a></button>
-        <button><a href="{% url 'userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <div class="header">
+            
+            <div class="left-section">
+                <img class="lspu-logo" src="{% static 'home/logo/lspu-logo.png' %}">
+            </div>
 
-        <div class="categories">
-            {% for category in categories %}
-            <button onclick="showItem('{{ category }}')" class="category_button">{{ category }}</button>
-            {% endfor %}
+            <div class="middle-section">
+                <form method="get" action="{% url 'home' %}">
+                    <input class="search-bar" type="text" placeholder="Search by name,id,category" value="{{ query }}">
+                    <input class="search-button" type="submit" value="Search">
+                </form>
+            </div>
+
+            <div class="right-section">
+                <img class="ccs-logo" src="{% static 'home/logo/ccs-logo.jpg' %}">
+            </div>
+            
+        </div>
+        
+        <div class="button-grid">
+            {% include 'home/result_list.html' %}
+            <button class="buttons-tabs"><a href="{% url 'home' %}">Home</a></button>
+            <button class="buttons-tabs"><a href="{% url 'recents' %}">Recents</a></button>
+            <button class="buttons-tabs"><a href="{% url 'show_unreturned_items' %}">Unreturned</a></button>
+            <button class="buttons-tabs"><a href="{% url 'notification' %}">Notification</a></button>
+            <button class="buttons-tabs"><a href="{% url 'userprofile' %}">Account</a></button>
+            <button class="buttons-tabs"><a href="{% url 'logout' %}">Logout</a></button>
+        </div>   
+
+        <div class="category-container">
+            <p class="category-container-title">
+                Categories 
+            </p>   
+            <!-- category-grid -->
+            <div class="categories">
+
+                {% for category in categories %}
+                <!-- CATEGORY-PREVIEW -->
+                <button onclick="showItem('{{ category }}')" class="category_button">
+                    <div class="category-row">
+                        <img class="category-pic" src="{% static 'home/categories_icon/cleaninggg.png' %}">
+                    </div>
+                {{ category }}
+                </button>
+                {% endfor %}
+            </div>
         </div>
 
         <div id="category_item" class="category_div">
