update admin unretuned and recents
-added block of codes
(di ko lang sure kung working, di ko alam i access yung page ng admin)

--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -7,11 +7,49 @@
     </head>
     <h1>ADMIN RECENTS</h1>
     <body>
-        <button><a href="{% url 'admin_home' %}">Home</a></button>
-        <button><a href="{% url 'admin_recents' %}">Recents</a></button>
-        <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
-        <button><a href="{% url 'members' %}">Members</a></button>
-        <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
-        <button><a href="{% url 'logout' %}">Logout</a></button>
+        <div>
+            <button><a href="{% url 'admin_home' %}">Home</a></button>
+            <button><a href="{% url 'admin_recents' %}">Recents</a></button>
+            <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
+            <button><a href="{% url 'members' %}">Members</a></button>
+            <button><a href="{% url 'admin_userprofile' %}">Account</a></button>
+            <button><a href="{% url 'logout' %}">Logout</a></button>
+        </div>
+
+        <div id="container" class="rounded_corners">
+
+            <!-- test block code -->
+            <!-- template for the items -->
+            {% for items in borrowed_item %}
+            <div id="wrapper">
+                <div id="top">
+                    <div id="left">
+                        {% if items.item_stock.item_information.item_photo %}
+                            <img src="{{ items.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item"  height="100%" object-fit="contain">
+                        {% endif %}
+
+                    </div>
+                    <div id="right">
+                        <p id="item_name">{{items.item_stock.item_information.item_name}}</p>
+                        <p id="item_details">
+                            Time Borrowed: {{items.item_date_borrowed}}<br />
+                            Time Returned: {{items.item_date_returned}}<br />
+                            Borrower: {{items.item_borrower}}
+                        </p>
+                        <p id="item_quantity">Item Quantity: {{items.item_quantity}}</p>
+
+                    </div>
+                </div>
+                <div id="bottom">
+                    <!-- <div id="btn_con">
+                        <button id="return_btn" class="rounded_corners">Return</button>
+                    </div> -->
+                </div>
+
+            </div>
+            {% endfor %}
+            <!-- template for the items -->
+
+        </div>
     </body>
 </html>
