Added adding stock to item function

--- a/templates/home/item_form.html
+++ b/templates/home/item_form.html
@@ -5,5 +5,5 @@
     {{ item_form.item_photo }}
     {{ item_form.item_category }}
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Next">
 </form>
