Update sa js at admin

--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <title>ADMIN HOME</title>
     <body>
-<<<<<<< HEAD
         <header>
             <div class="logo left">
                 <img src="static/home/LSPU.png" alt="Left Logo">
@@ -142,7 +141,8 @@
                 <script src="static/home/homescript.js"></script>
             </head>
      </body>
-=======
+
+     <!-- start ng code ni westin -->
         <button><a href="{% url 'admin_home' %}">Home</a></button>
         <button><a href="{% url 'admin_recents' %}">Recents</a></button>
         <button><a href="{% url 'admin_unreturned' %}">Unreturned</a></button>
@@ -200,6 +200,6 @@
         </div>
 
         <script defer src="{% static 'home/homeadminscript.js' %}"></script>
+        <!-- end ng code ni westin -->
     </body>
->>>>>>> d7b03d9d04f9ee1305b36e075f3d2ad57a3bc46c
 </html>
