Added adding categories

--- a/templates/home/admin_home.html
+++ b/templates/home/admin_home.html
@@ -23,6 +23,10 @@
         <div id="edit_category_buttons">
             <button onclick="editCategory()">Edit</button>
         </div>
+
+        <div id="add_category_form">
+
+        </div>
         
         
         <div id="category_item" class="category_div">
