--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -105,7 +105,7 @@ form {
     padding: 10px 15px;
     border: none;
     border-radius: 3px;
-    margin-right: 5px;
+    margin-right: 10px;
     cursor: pointer;
 } 
   
@@ -127,16 +127,25 @@ form {
 }
   
 /* Buttons (home and logout) */
+.buttons-box {
+    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    padding-top: 3px;
+    padding-bottom: 3px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); /* Optional: Add a shadow for better visibility */
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+}
+
 .button-grid{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    column-gap: 16px;
-    margin-top: 40px;
-    margin-left: 50px;
-    margin-right: 50px;
+    justify-content: space-around;
+    margin-top: 5px;
     flex-wrap: wrap;
-    align-content: space-evenly;
+    align-content: first baseline;
     gap: 1em;
 }
   
@@ -149,16 +158,20 @@ form {
     padding-right: 16px;
     border-radius: 5px;
     cursor: pointer;
-    transition: box-shadow 0.15s;
     vertical-align: top;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
-    width: 150px;
+    transition-duration: 0.4s;
 }
     
 .buttons-tabs:hover  {
-    box-shadow: 5px 5px 15px rgba(113,26,33, 0.40);
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
 }
-  
+
+.buttons-tabs:active {
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
 a{
     font-size: 20px;
     font-weight: bold;
@@ -171,9 +184,51 @@ a:link {
 } 
   
 a:hover { 
-    text-decoration: none; 
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
 } 
+
+a:active { 
+    color: rgb(230,124,55);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+} 
+
+.guest-button-grid{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 16px;
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
   
+.guest-buttons-tabs {
+    background-color: rgb(255,255,255);
+    border: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: box-shadow 0.15s;
+    vertical-align: top;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
+    width: 150px;
+    transition-duration: 0.4s;
+}
+    
+.guest-buttons-tabs:hover  {
+    box-shadow: 5px 5px 15px rgba(113,26,33, 0.40);
+    text-decoration: underline solid  rgb(230,124,55) 2px;
+}
+
+.guest-buttons-tabs:active {
+    box-shadow: 5px 5px 15px rgba(113,26,33, 0.40);
+}
+
+
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
     display:block;
@@ -241,7 +296,7 @@ Start coding here
 */
 .category-container {
     background-color: rgb(255, 255, 255);
-    padding: 30px;
+    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.20); /* Optional: Add a shadow for better visibility */
     margin-top: 45px;
     margin-left: 50px;
@@ -270,13 +325,30 @@ Start coding here
 }
 
 .category_button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     border: 0.5px solid rgb(171,177,177);
     border-radius: 6px;
     height: 230px;
-    width: 150px;
+    width: 170px;
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px; 
+    padding-bottom: 20px;
+    background-color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    background-size: 130px;
+    background-position: 50%  20% ;
+    transition-duration: 0.2s;
+
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center bottom;
+    font-family: Arial;
+
+    
 }
   
 .category_button:hover {
@@ -284,23 +356,25 @@ Start coding here
     box-shadow: 8px 8px 10px rgba(113,26,33, 0.40);
 }
 
-.category-row {
-    margin-bottom: 5px;
+.category_button:nth-child(1) {
+    background-image: url(../home/categories_icon/cleaninggg.png);
+    background-size: 120px;
 }
 
-.category-pic {
-    width: 150px;
-}  
+.category_button:nth-child(2) {
+    background-image: url(../home/categories_icon/furni.png);
+}
 
-.category_button.category {
-    display: none;
-    text-align: center;
-    margin-top: 5px;
-    border-top: 0.5px solid rgb(171,177,177);
-    font-size: 20px;
-    font-weight: 500;
-    text-align: center;
-    font-family: Arial;
+.category_button:nth-child(3) {
+    background-image: url(../home/categories_icon/roooom.png);
+}
+
+.category_button:nth-child(4) {
+    background-image: url(../home/categories_icon/documents.png);
+}
+
+.category_button:nth-child(5) {
+    background-image: url(../home/categories_icon/GADGETS.png);
 }
 
 #cleaning {
