--- a/templates/unreturned/admin_unreturned.html
+++ b/templates/unreturned/admin_unreturned.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="bottom">
                     <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners">Return</button>
+                        <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
                     </div>
                 </div>
 
